--- a/app/src/main/res/layout/activity_check_sheet.xml
+++ b/app/src/main/res/layout/activity_check_sheet.xml
@@ -21,7 +21,8 @@
             <CheckBox
                 android:id="@+id/check1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:text="　扉のロックを掛けましたか？"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
