--- a/app/src/main/res/layout/activity_attention.xml
+++ b/app/src/main/res/layout/activity_attention.xml
@@ -18,9 +18,9 @@
                 android:id="@+id/attention_txt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="test"
-                android:textSize="28dp"
+                android:gravity="center|start"
+                android:text="@string/attention"
+                android:textSize="23dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
