--- a/app/src/main/res/layout/activity_reserve_on_time.xml
+++ b/app/src/main/res/layout/activity_reserve_on_time.xml
@@ -150,7 +150,7 @@
             android:orientation="horizontal"
             android:layout_weight="1">
             <ListView
-                android:id="@+id/re_list_reseved"
+                android:id="@+id/re_list_reserved"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </LinearLayout>
