予約の更新処理と、ＱＲコードによる入室の可否を判定する処理の追加。 その他コメントなど、色々と修正。

--- a/app/src/main/res/layout/activity_attention.xml
+++ b/app/src/main/res/layout/activity_attention.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center|start"
-                android:text="@string/attention"
+                android:text="@string/attention_wait"
                 android:textSize="23dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
                     android:id="@+id/attention_submit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="次へ" />
+                    android:text="@string/back" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
