【activity_main.xml】レイアウトの一部変更。 【各ktファイル】タイトルバーの表示文を各画面のものに変更。 【Quit.kt他】退出完了した予約情報をログ出力する処理の追加。 他、一部コメントの追加や変更。

--- a/app/src/main/res/layout/activity_reserve_confirmation.xml
+++ b/app/src/main/res/layout/activity_reserve_confirmation.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/conf_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="RoomXに〇〇月〇〇日△△時◇◇分で予約します。\nよろしいですか？"
+                android:text="@string/confirm_def"
                 android:textSize="30dp"
                 android:textAlignment="center"/>
         </LinearLayout>
