--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,24 +60,29 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="10dp"
-                android:orientation="vertical">
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:orientation="vertical"
+                android:background="@drawable/home_layout">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/reserved"
+                    android:paddingStart="20dp"
                     android:textSize="22dp" />
                 <TextView
                     android:id="@+id/time_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="@string/date_temp"
                     android:textSize="40dp" />
                 <TextView
                     android:id="@+id/date_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="26dp" />
+                    android:layout_gravity="center"
+                    android:textSize="27dp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -101,7 +106,7 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="@string/home_reserve"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/home_btn"
                     android:background="@drawable/button_state" />
 
                 <Button
@@ -111,7 +116,7 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="@string/home_list"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/home_btn"
                     android:background="@drawable/button_state" />
             </LinearLayout>
 
@@ -128,7 +133,7 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="@string/home_entry"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/home_btn"
                     android:background="@drawable/button_state" />
 
                 <Button
@@ -138,7 +143,7 @@
                     android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:text="@string/home_lock"
-                    android:textSize="20dp"
+                    android:textSize="@dimen/home_btn"
                     android:background="@drawable/button_state" />
             </LinearLayout>
         </LinearLayout>
