--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="ZOOM部屋\nオンライン予約システム"
+                android:text="@string/app_name"
                 android:textSize="36dp"
                 android:textAlignment="center"/>
         </LinearLayout>
