--- a/app/src/main/res/layout/item_reserve.xml
+++ b/app/src/main/res/layout/item_reserve.xml
@@ -27,7 +27,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="ここに日時と部屋番号が表示されるよ"
+                    android:text="@string/list_def"
                     android:textSize="20dp" />
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -44,7 +44,7 @@
                         android:layout_weight="1.5"
                         android:gravity="right"
                         android:paddingTop="5dp"
-                        android:text="更新"
+                        android:text="@string/update"
                         android:textColor="@color/purple_700" />
                     <TextView
                         android:id="@+id/remove_tv"
@@ -53,7 +53,7 @@
                         android:layout_weight="1.5"
                         android:gravity="right"
                         android:paddingTop="5dp"
-                        android:text="取消"
+                        android:text="@string/list_del"
                         android:textColor="@color/purple_700" />
                 </LinearLayout>
             </LinearLayout>
