--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -18,23 +18,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
-            <TextView
+            <ImageView
+                android:id="@+id/title_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/app_name"
-                android:textSize="36dp"
-                android:textAlignment="center"/>
+                android:src="@drawable/title2_b"
+                android:scaleType="centerCrop" />
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.6"></LinearLayout>
-        <LinearLayout
+            android:id="@+id/title_login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="1">
+            android:layout_weight="1.6"
+            android:background="@drawable/title_colorg">
             <Button
                 android:id="@+id/tit_btn"
                 android:layout_width="wrap_content"
