予約更新時に月日が１桁だと予約処理が上手くいかない不具合を修正。 タイトル画面の画像を変更したため、一時的に処理やレイアウトを変更。 【Reserve_onTime.kt】予約一覧を出す際に、月日が１桁だとうまく表示されない不具合を修正。 【item_reserve.xml】「更新」ボタンを若干押しやすく変更。 【MainActivity.kt】入室後すぐに戻って来た時に、「入室中」が表示されるように修正。

--- a/app/src/main/res/layout/activity_lock_unlock.xml
+++ b/app/src/main/res/layout/activity_lock_unlock.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".LockUnlock">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/new_title1" />
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
