--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".Title">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/new_title1" />
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,24 +28,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1">
-            <ImageView
-                android:id="@+id/title_img"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/title2_b"
-                android:scaleType="centerCrop" />
+<!--            <ImageView-->
+<!--                android:id="@+id/title_img"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:src="@drawable/title2_b"-->
+<!--                android:scaleType="centerCrop" />-->
         </LinearLayout>
         <LinearLayout
             android:id="@+id/title_login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_weight="1.6"
-            android:background="@drawable/title_colorg">
+            android:layout_weight="1.6">
             <Button
                 android:id="@+id/tit_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:text="ログイン"
                 android:textSize="20dp"/>
         </LinearLayout>
