【AndroidManifest.xml】アイコンの変更 【String.xml】独立していた文字列を一括で格納 【activity.kt】タイトル画像を変更 【Query.kt,activity_query.xml他】お問い合わせフォームの作成(レイアウトのみ) 【Reserve_onTime.kt】連続予約時間が５時間までになるよう修正、一部メソッドの削除 【Title.kt】画像変更に伴い、コメントアウトしていた部分を仕様変更して再使用 【Reserve_onTime.kt,FirebaseReserve.kt】予約情報の内、本来２桁で処理する部分が１桁の場合に起こる不具合を修正 その他、各メソッドの整地やコメントの追加など

--- a/app/src/main/res/layout/activity_reserve__commit.xml
+++ b/app/src/main/res/layout/activity_reserve__commit.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/commit_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/commit_ng"
+                android:text="@string/rco_ng"
                 android:textSize="26dp"
                 android:textAlignment="center"/>
         </LinearLayout>
