--- a/app/src/main/res/layout/activity_lock_unlock.xml
+++ b/app/src/main/res/layout/activity_lock_unlock.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/new_title1" />
+            android:src="@drawable/n_title1" />
     </FrameLayout>
 
     <LinearLayout
