--- a/app/src/main/res/layout/activity_reserve_on_time.xml
+++ b/app/src/main/res/layout/activity_reserve_on_time.xml
@@ -71,6 +71,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="1"
+                    android:spinnerMode="dropdown"
                     android:entries="@array/time_list_h"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -83,6 +84,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:spinnerMode="dropdown"
                     android:entries="@array/time_list_m"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -115,6 +117,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:layout_weight="1"
+                    android:spinnerMode="dropdown"
                     android:entries="@array/time_list_h"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -127,6 +130,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:spinnerMode="dropdown"
                     android:entries="@array/time_list_m"/>
             </LinearLayout>
             <LinearLayout
@@ -152,6 +156,7 @@
                 android:id="@+id/re_spi_room"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:spinnerMode="dropdown"
                 android:entries="@array/room_num"/>
         </LinearLayout>
         <LinearLayout
