--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/attention"
         android:title="注意事項" />
-    <item android:id="@+id/message"
+    <item android:id="@+id/edit_query"
         android:title="お問い合わせ" />
     <item android:id="@+id/logout"
         android:title="ログアウト" />
