--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,12 +32,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/number"
-                    android:textSize="20dp" />
+                    android:textSize="@dimen/main_number" />
                 <TextView
                     android:id="@+id/st_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp" />
+                    android:textSize="@dimen/main_number" />
             </LinearLayout>
 
             <LinearLayout
@@ -49,12 +49,12 @@
                     android:id="@+id/st_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="28dp" />
+                    android:textSize="@dimen/main_name" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/home"
-                    android:textSize="28dp" />
+                    android:textSize="@dimen/main_name" />
             </LinearLayout>
 
             <LinearLayout
@@ -69,20 +69,20 @@
                     android:layout_height="wrap_content"
                     android:text="@string/reserved"
                     android:paddingStart="20dp"
-                    android:textSize="22dp" />
+                    android:textSize="@dimen/main_next" />
                 <TextView
                     android:id="@+id/time_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/date_temp"
-                    android:textSize="40dp" />
+                    android:textSize="@dimen/main_getting" />
                 <TextView
                     android:id="@+id/date_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textSize="27dp" />
+                    android:textSize="@dimen/main_date" />
             </LinearLayout>
         </LinearLayout>
 
