--- a/app/src/main/res/layout/activity_query.xml
+++ b/app/src/main/res/layout/activity_query.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.8"></LinearLayout>
+            android:layout_weight="2.0"></LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -21,7 +21,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:background="@drawable/border"
-            android:layout_weight="1.8">
+            android:layout_weight="1.6">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -29,7 +29,8 @@
                 android:gravity="center|start"
                 android:layout_weight="2"
                 android:background="@color/query"
-                android:text="@string/query_sub" />
+                android:text="@string/query_sub"
+                android:textSize="@dimen/query_tv" />
             <EditText
                 android:id="@+id/subject_et"
                 android:layout_width="match_parent"
@@ -54,7 +55,7 @@
                 android:layout_weight="3"
                 android:background="@color/query"
                 android:text="@string/query_body"
-                android:textSize="20dp" />
+                android:textSize="@dimen/query_tv" />
             <EditText
                 android:id="@+id/body_et"
                 android:layout_width="match_parent"
