--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center|start"
-                android:textSize="23dp" />
+                android:textSize="@dimen/release_tv" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/ok"
-                    android:textSize="24dp" />
+                    android:textSize="@dimen/release_ok" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
