--- a/app/src/main/res/layout/activity_reserve__commit.xml
+++ b/app/src/main/res/layout/activity_reserve__commit.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/rco_ng"
-                android:textSize="26dp"
+                android:textSize="@dimen/rco_tv"
                 android:textAlignment="center"/>
         </LinearLayout>
         <LinearLayout
@@ -40,7 +40,7 @@
                 android:id="@+id/re_com_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="完了"/>
+                android:text="@string/complete"/>
         </LinearLayout>
     </LinearLayout>
 
