--- a/app/src/main/res/layout/activity_reserve_confirmation.xml
+++ b/app/src/main/res/layout/activity_reserve_confirmation.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/rcf_def"
-                android:textSize="30dp"
+                android:textSize="@dimen/rcf_tv"
                 android:textAlignment="center"/>
         </LinearLayout>
         <LinearLayout
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="確認"/>
+                android:text="@string/rcf_btn"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="キャンセル"/>
+                android:text="@string/cancel"/>
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
