--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -42,8 +42,8 @@
                 android:id="@+id/tit_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ログイン"
-                android:textSize="20dp"/>
+                android:text="@string/title_btn"
+                android:textSize="@dimen/title_btn"/>
         </LinearLayout>
     </LinearLayout>
 
