--- a/app/src/main/res/layout/item_reserve.xml
+++ b/app/src/main/res/layout/item_reserve.xml
@@ -28,7 +28,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/list_def"
-                    android:textSize="20dp" />
+                    android:textSize="@dimen/list_item" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
