--- a/app/src/main/res/layout/activity_lock_unlock.xml
+++ b/app/src/main/res/layout/activity_lock_unlock.xml
@@ -23,7 +23,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.3"></LinearLayout>
+            android:layout_weight="1.3">
+            <Spinner
+                android:id="@+id/lock_room_spi"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:entries="@array/room_num" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
